FIX: Images and videos on mobile

--- a/themes/pixboost/assets/css/blog-page.css
+++ b/themes/pixboost/assets/css/blog-page.css
@@ -7,6 +7,11 @@
     padding: 10px;
 }
 
+.single-page img,
+.single-page video {
+    max-width: 100%;
+}
+
 .single-page img.full-width,
 .single-page .full-width img
 {
